--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 	},
 	"type": "library",
 	"license": "MIT",
-	"target-dir": "Jamm/Memory"
+	"target-dir": "Jamm/Memory",
 	"authors": [
 		{
 			"name": "Eugene OZ",
